@@ -11,7 +11,7 @@
   <%= stylesheet_link_tag 'color-scheme.css' %>
 
   <!-- active scaffold -->
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "application" %>
 </head>
 <body>
 
